--- a/static/html/about.html
+++ b/static/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andy Vo</title>
+    <title>Andy Vo | About Me</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
@@ -26,7 +26,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="#">&lt;Andy Vo&gt;</a>
+            <a href="/static/html/index.html">&lt;Andy Vo&gt;</a>
         </div>
         <div class="hamburger">
             <div class="hamburgerline1"></div>
@@ -35,7 +35,7 @@
         </div>
         <ul class="menu">
             <li class="item"><a href="/static/html/work.html">Work</a></li>
-            <li class="item"><a href="/static/html/about.html">About</a></li>
+            <li class="item active"><a href="/static/html/about.html">About</a></li>
             <li class="item"><a href="#">Resume</a></li>
         </ul>
     </nav>
