animated typewriter text

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -20,6 +20,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="/images/andyvo_logo.png">
+    <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_logo.png">
+    <link rel="mask-icon" type="image/png" href="/images/andyvo_logo.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
@@ -39,6 +41,21 @@
             <li class="item"><a href="#">Resume</a></li>
         </ul>
     </nav>
+
+    <section class="hero">
+        <div class="hero_text">
+            <h1>Hello! I’m Andy 👋</h1>
+            <br>
+            <div class="hero_subtext">
+                <p>I’m a product designer studying at Boston University bringing users together through accessible design.</p>
+                <br>
+                <p>Find me <span class="typewriter" data-wait="3000" data-words='["climbing trees!", "programming web and mobile apps!", "turning imagination into creation!", "cooking for my food insta!", "on Figma, at BU, or out and about!"]'></span></p>
+            </div>
+        </div>
+        <div class="hero_img">
+            <img src="/images/full_tree.svg" alt="Andy Vo Connected Tree">
+        </div>
+    </section>
 
     <script src="/static/js/script.js"></script>
 </body>
