home and nav edits w js

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -49,14 +49,44 @@
             <div class="hero_subtext">
                 <p>I’m a product designer studying at Boston University bringing users together through accessible design.</p>
                 <br>
-                <p>Find me <span class="typewriter" data-wait="3000" data-words='["climbing trees!", "programming web and mobile apps!", "turning imagination into creation!", "cooking for my food insta!", "on Figma, at BU, or out and about!"]'></span></p>
+                <p>Find me <span class="typewriter" data-wait="3000" data-words='["climbing trees!", "programming web and mobile apps!", "turning imagination into creation!", "cooking for my food insta!", "exploring Figma, Boston, and the world!"]'></span></p>
             </div>
         </div>
         <div class="hero_img">
-            <img src="/images/full_tree.svg" alt="Andy Vo Connected Tree">
+            <img src="/images/full_tree.svg" type="image/svg" alt="Andy Vo Connected Tree">
+        </div>
+        <div class="scrollDown"><a href="#study1"><i class="fas fa-angle-double-down"></i></a></div>
+    </section>
+
+    <section class="casestudy" id="study1">
+        <div class="casestudy_info" id="study1_card">
+            <h4>BU CS Ambassadors</h4>
+            <div class="casestudy_info_card_padding">
+                <div class="casestudy_info_card">
+                    <h5 class="casestudy_position">Freelance Web Developer</h5>
+                    <h2 class="casestudy_title">Redesigning the Face of CS @ BU</h2>
+                    <p class="casestudy_summary">In a web design competition, I redefined the club’s branding to not only appeal to modern design practices but also to incoming collegiate freshmen looking for an inclusive, supporting community.</p>
+                    <button class="casestudy_btn" type="button" onclick="" id="casestudy_bucsa"><h5>Read Case Study</h5></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="casestudy" id="study2">
+        <div class="casestudy_info"  id="study2_card">
+            <h4>bumpcall</h4>
+            <div class="casestudy_info_card_padding">
+                <div class="casestudy_info_card">
+                    <h5 class="casestudy_position">Director of Product Design, Digital Designer Intern</h5>
+                    <h2 class="casestudy_title">A New Way to Stay In Touch</h2>
+                    <p class="casestudy_summary">From intern to director at a start-up company, I led the creative team through product design iterations, redesigning mobile app screens and forging brand identity.</p>
+                    <button class="casestudy_btn" type="button" onclick="" id="casestudy_bumpcall"><h5>Read Case Study</h5></button>
+                </div>
+            </div>
         </div>
     </section>
 
     <script src="/static/js/script.js"></script>
+    <script src="/static/js/pages.js"></script>
 </body>
 </html>
