landing page and footer

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -66,25 +66,65 @@
                     <h5 class="casestudy_position">Freelance Web Developer</h5>
                     <h2 class="casestudy_title">Redesigning the Face of CS @ BU</h2>
                     <p class="casestudy_summary">In a web design competition, I redefined the club’s branding to not only appeal to modern design practices but also to incoming collegiate freshmen looking for an inclusive, supporting community.</p>
-                    <button class="casestudy_btn" type="button" onclick="" id="casestudy_bucsa"><h5>Read Case Study</h5></button>
+                    <button class="casestudy_btn" type="button" id="casestudy_bucsa"><h5>Read Case Study</h5></button>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="casestudy" id="study2">
-        <div class="casestudy_info"  id="study2_card">
+        <div class="casestudy_info" id="study2_card">
             <h4>bumpcall</h4>
             <div class="casestudy_info_card_padding">
                 <div class="casestudy_info_card">
                     <h5 class="casestudy_position">Director of Product Design, Digital Designer Intern</h5>
                     <h2 class="casestudy_title">A New Way to Stay In Touch</h2>
                     <p class="casestudy_summary">From intern to director at a start-up company, I led the creative team through product design iterations, redesigning mobile app screens and forging brand identity.</p>
-                    <button class="casestudy_btn" type="button" onclick="" id="casestudy_bumpcall"><h5>Read Case Study</h5></button>
+                    <button class="casestudy_btn" type="button" id="casestudy_bumpcall"><h5>Read Case Study</h5></button>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="casestudy" id="study3">
+        <div class="casestudy_info" id="study3_card">
+            <h4>Hoya Hacks 2021</h4>
+            <div class="casestudy_info_card_padding">
+                <div class="casestudy_info_card">
+                    <h5 class="casestudy_position">Hackathon Participant, UX Designer</h5>
+                    <h2 class="casestudy_title">Why Waste More? WasteLess.</h2>
+                    <p class="casestudy_summary">Created to solve the problem of incorrectly identifying and disposing of waste, my strategy in this hackathon was to design functional and feasible mockups that would make disposing waste not a waste of time.</p>
+                    <button class="casestudy_btn" type="button" id="casestudy_wasteless"><h5>Read Case Study</h5></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="casestudy" id="study4">
+        <div class="casestudy_info" id="study4_card">
+            <h4>ProductVision</h4>
+            <div class="casestudy_info_card_padding">
+                <div class="casestudy_info_card">
+                    <h5 class="casestudy_position">President, Marketing Chair</h5>
+                    <h2 class="casestudy_title">From Scratch, COVID-edition</h2>
+                    <p class="casestudy_summary">Born out of the desire to learn about product management, building a student organization from the ground up is one thing - amidst COVID is another. Here’s my story on building a brand from scratch.</p>
+                    <button class="casestudy_btn" type="button" id="casestudy_productvision"><h5>Read Case Study</h5></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="logo">
+            <a href="#">&lt;/Andy Vo&gt;</a>
+        </div>
+        <div class="copyright">
+            <p>© 2021 Andy Vo</p>
+        </div>
+        <div class="socials">
+            <p><a href="mailto:andyvo@bu.edu" class="social_link" target="_blank">Email</a> &nbsp;| &nbsp;<a href="https://github.com/andyyvo/avoportfolio" class="social_link">GitHub</a> &nbsp;| &nbsp;<a href="https://www.linkedin.com/in/andyyvo/" class="social_link" target="_blank">LinkedIn</a> &nbsp;| &nbsp;<a href="https://www.instagram.com/andyy.vo/" class="social_link" target="_blank">Instagram</a></p>
+        </div>
+    </footer>
 
     <script src="/static/js/script.js"></script>
     <script src="/static/js/pages.js"></script>
