--- a/static/html/index.html
+++ b/static/html/index.html
@@ -114,6 +114,29 @@
         </div>
     </section>
 
+    <section class="casestudy" id="study5">
+        <div class="casestudy_info" id="study5_card">
+            <h4>Catalyst Designathon 2020</h4>
+            <div class="casestudy_info_card_padding">
+                <div class="casestudy_info_card">
+                    <h5 class="casestudy_position">Designathon Participant, UX Designer</h5>
+                    <h2 class="casestudy_title">Unwrapping Safe Celebrations!</h2>
+                    <p class="casestudy_summary">How do we connect during the COVID-19 pandemic? In this 5-hour designathon hosted by BU FORGE Design Club, my team and I explore the world of digital celebrations.</p>
+                    <button class="casestudy_btn" type="button" id="casestudy_unwrap"><h5>Read Case Study</h5></button>
+                </div>
+            </div>
+        </div>
+        <div class="casestudy_unwrap_pic unwrap_phone1 rellax" data-rellax-speed="-2">
+            <img src="/images/unwrap_phone1.png" alt="Case Study Unwrap Mockup">
+        </div>
+        <div class="casestudy_unwrap_pic unwrap_phone2 rellax" data-rellax-speed="-2">
+            <img src="/images/unwrap_phone2.png" alt="Case Study Unwrap Mockup">
+        </div>
+        <div class="casestudy_unwrap_pic unwrap_phone3 rellax" data-rellax-speed="-2">
+            <img src="/images/unwrap_phone3.png" alt="Case Study Unwrap Mockup">
+        </div>
+    </section>
+
     <footer>
         <div class="logo">
             <a href="#">&lt;/Andy Vo&gt;</a>
@@ -128,5 +151,7 @@
 
     <script src="/static/js/script.js"></script>
     <script src="/static/js/pages.js"></script>
+    <script src="/static/js/rellax.min.js"></script>
+    <script src="/static/js/rellax_script.js"></script>
 </body>
 </html>
