--- a/static/html/index.html
+++ b/static/html/index.html
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Vo</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
+    <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <meta property="og:image" content="https://drive.google.com/file/d/1u5vTQn9-uYoThbWux5g0MjbHYaKIH7hP/view?usp=sharing">
+    <!-- twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Andy Vo">
     <meta property="twitter:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <meta property="twitter:image" content="https://drive.google.com/file/d/17TrFxM-U0b-KrE-b91iDm38GZYnRolYh/view?usp=sharing">
+    <!-- for mobile themes i think -->
     <meta name="theme-color" content="#2A2A2A">
 
-
+    <!-- main css -->
     <link rel="stylesheet" href="/static/css/main.css">
+    <!-- space mono and roboto pairing -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- favicon stuffs -->
     <link rel="shortcut icon" type="image/png" href="/images/andyvo_logo.png">
     <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_logo.png">
     <link rel="mask-icon" type="image/png" href="/images/andyvo_logo.png">
@@ -27,6 +32,7 @@
 </head>
 <body>
     <nav>
+        <!-- andy vo html tag logo -->
         <div class="logo">
             <a href="#">&lt;Andy Vo&gt;</a>
         </div>
@@ -49,12 +55,14 @@
             <div class="hero_subtext">
                 <p>I’m a product designer studying at Boston University bringing users together through accessible design.</p>
                 <br>
+                <!-- animated typewriter effect for fun -->
                 <p>Find me <span class="typewriter" data-wait="3000" data-words='["climbing trees!", "programming web and mobile apps!", "turning imagination into creation!", "cooking for my food insta!", "exploring Figma, Boston, and the world!"]'></span></p>
             </div>
         </div>
         <div class="hero_img">
             <img src="/images/full_tree.svg" type="image/svg" alt="Andy Vo Connected Tree">
         </div>
+        <!-- click to scroll to first casestudy -->
         <div class="scrollDown"><a href="#study1"><i class="fas fa-angle-double-down"></i></a></div>
     </section>
 
@@ -126,6 +134,7 @@
                 </div>
             </div>
         </div>
+        <!-- parallax rellax -->
         <div class="casestudy_unwrap_pic unwrap_phone1 rellax" data-rellax-speed="-2">
             <img src="/images/unwrap_phone1.png" alt="Case Study Unwrap Mockup">
         </div>
@@ -138,14 +147,18 @@
     </section>
 
     <footer>
+        <div class="copyright">
+            <p class="copyright_text"><i class="far fa-copyright"></i> 2021 Andy Vo & 🎵🎸🌲</p>
+            <div class="socials">
+                <a href="mailto:andyvo@bu.edu" class="social_link mail" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/andyyvo/avoportfolio" class="social_link github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <!-- closing html tag as logo -->
         <div class="logo">
             <a href="#">&lt;/Andy Vo&gt;</a>
-        </div>
-        <div class="copyright">
-            <p>© 2021 Andy Vo</p>
-        </div>
-        <div class="socials">
-            <p><a href="mailto:andyvo@bu.edu" class="social_link" target="_blank">Email</a> &nbsp;| &nbsp;<a href="https://github.com/andyyvo/avoportfolio" class="social_link">GitHub</a> &nbsp;| &nbsp;<a href="https://www.linkedin.com/in/andyyvo/" class="social_link" target="_blank">LinkedIn</a> &nbsp;| &nbsp;<a href="https://www.instagram.com/andyy.vo/" class="social_link" target="_blank">Instagram</a></p>
         </div>
     </footer>
 
