about section & tweaks

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andy Vo | About Me</title>
+    <title>Andy Vo</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
+    <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <meta property="og:image" content="https://drive.google.com/file/d/1u5vTQn9-uYoThbWux5g0MjbHYaKIH7hP/view?usp=sharing">
+    <!-- twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Andy Vo">
     <meta property="twitter:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <meta property="twitter:image" content="https://drive.google.com/file/d/17TrFxM-U0b-KrE-b91iDm38GZYnRolYh/view?usp=sharing">
+    <!-- for mobile themes i think -->
     <meta name="theme-color" content="#2A2A2A">
 
-
+    <!-- main css -->
     <link rel="stylesheet" href="/static/css/main.css">
+    <!-- space mono and roboto pairing -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- favicon stuffs -->
     <link rel="shortcut icon" type="image/png" href="/images/andyvo_logo.png">
+    <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_logo.png">
+    <link rel="mask-icon" type="image/png" href="/images/andyvo_logo.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
     <nav>
+        <!-- andy vo html tag logo -->
         <div class="logo">
             <a href="/static/html/index.html">&lt;Andy Vo&gt;</a>
         </div>
@@ -39,6 +47,49 @@
             <li class="item"><a href="#">Resume</a></li>
         </ul>
     </nav>
+
+    <section class="about">
+        <div class="about_img">
+            <img class="before_image" src="/images/andyvo_foodie.png" type="image/png" alt="Andy Vo Eating Food">
+            <video class="after_image" src="/images/andyvo_eats.mp4" muted autoplay loop></video>
+            <div class="behind_image bi1"></div>
+            <div class="behind_image bi2"></div>
+        </div>
+        <div class="about_text">
+            <h2>A little bit about me 🤠</h2>
+            <br>
+            <p>Hi there! I'm Andy and I am an interdisciplinary product designer and developer based in Boston and New Hampshire. I will be graduating from Boston University and the Kilachand Honors College with a Bachelor's in Computer Science.</p>
+            <br>
+            <p>Through my experiences, I am inspired by social innovation and storytelling. To bring people together through accessible design is the goal of every project I pursue. At the heart of UX design is to maximize the "naturalness" of the interactions between a user and the product. How can we make the user flow not only fun and not robotic but also natural like a conversation? It's all about adding a bit more color to the world.</p>
+            <br>
+            <p>Outside of Figma, I am an avid tree climber 🌲, major foodie (cooking and eating) 🍜, Star Wars enthusiast 🌌, and indie rock/pop guitarist 🎸. With my headset in and music on, I'll be dancing in my room or heel clicking down the street trying to beat my 89,119 minutes of Spotify from last year.</p>
+            <br>
+            <p>But enough about me. Let's talk about you! Message me through <a href="mailto:andyvo@bu.edu"><b>email</b></a> or <a href="https://www.linkedin.com/in/andyyvo/"><b>LinkedIn</b></a> with some food recommendations and let's have ourselves a coffee chat!</p>
+        </div>
+    </section>
+
+    <footer>
+        <!-- SOCIALS for the people!
+             email: andyvo@bu.edu
+             github: andyyvo
+             linkedin: andyyvo
+             insta: andyy.vo -->
+        <div class="copyright">
+            <h4>Let's have a coffee chat ☕</h4>
+            <div class="socials">
+                <a href="mailto:andyvo@bu.edu" class="social_link mail" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/andyyvo/avoportfolio" class="social_link github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <!-- emoji ideas: tree, boba (not on all platforms), guitar, music, cowboy emoji, celebrate confetti popper, nerd emoji, rollerblades, lightbulb, fire -->
+            <p class="copyright_text"><i class="far fa-copyright"></i> 2021 Andy Vo & 🎵🎸🌲</p>
+        </div>
+        <!-- closing html tag as logo -->
+        <div class="logo">
+            <a href="/static/html/index.html">&lt;/Andy Vo&gt;</a>
+        </div>
+    </footer>
 
     <script src="/static/js/script.js"></script>
 </body>
