--- a/static/html/index.html
+++ b/static/html/index.html
@@ -66,6 +66,7 @@
         <div class="scrollDown"><a href="#study1"><i class="fas fa-angle-double-down"></i></a></div>
     </section>
 
+    <!-- bucsambassadors -->
     <section class="casestudy" id="study1">
         <div class="casestudy_info" id="study1_card">
             <h4>BU CS Ambassadors</h4>
@@ -80,6 +81,7 @@
         </div>
     </section>
 
+    <!-- bumpcall -->
     <section class="casestudy" id="study2">
         <div class="casestudy_info" id="study2_card">
             <h4>bumpcall</h4>
@@ -94,6 +96,7 @@
         </div>
     </section>
 
+    <!-- hoya hacks 2021 -> go into more hacks in Work -->
     <section class="casestudy" id="study3">
         <div class="casestudy_info" id="study3_card">
             <h4>Hoya Hacks 2021</h4>
@@ -108,6 +111,7 @@
         </div>
     </section>
 
+    <!-- productvision -> add AXS in Work -->
     <section class="casestudy" id="study4">
         <div class="casestudy_info" id="study4_card">
             <h4>ProductVision</h4>
@@ -122,6 +126,7 @@
         </div>
     </section>
 
+    <!-- Catalyst Designathon 2020 -> add other designathons in Work -->
     <section class="casestudy" id="study5">
         <div class="casestudy_info" id="study5_card">
             <h4>Catalyst Designathon 2020</h4>
@@ -147,6 +152,11 @@
     </section>
 
     <footer>
+        <!-- SOCIALS for the people!
+             email: andyvo@bu.edu
+             github: andyyvo
+             linkedin: andyyvo
+             insta: andyy.vo -->
         <div class="copyright">
             <h4>Let's have a coffee chat ☕</h4>
             <div class="socials">
@@ -155,6 +165,7 @@
                 <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
+            <!-- emoji ideas: tree, boba (not on all platforms), guitar, music, cowboy emoji, celebrate confetti popper, nerd emoji, rollerblades, lightbulb, fire -->
             <p class="copyright_text"><i class="far fa-copyright"></i> 2021 Andy Vo & 🎵🎸🌲</p>
         </div>
         <!-- closing html tag as logo -->
