small style edits

--- a/static/html/resume.html
+++ b/static/html/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andy Vo | About</title>
+    <title>Andy Vo | Resume</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
     <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
@@ -43,32 +43,10 @@
         </div>
         <ul class="menu">
             <li class="item"><a href="/static/html/work.html">Work</a></li>
-            <li class="item active"><a href="/static/html/about.html">About</a></li>
-            <li class="item"><a href="/static/html/resume.html">Resume</a></li>
+            <li class="item"><a href="/static/html/about.html">About</a></li>
+            <li class="item active"><a href="/static/html/resume.html">Resume</a></li>
         </ul>
     </nav>
-
-    <main>
-        <section class="about">
-            <div class="about_img">
-                <img class="before_image" src="/images/andyvo_foodie.png" type="image/png" alt="Andy Vo Eating Food">
-                <video class="after_image" src="/images/andyvo_eats.mp4" muted autoplay loop></video>
-                <div class="behind_image bi1"></div>
-                <div class="behind_image bi2"></div>
-            </div>
-            <div class="about_text">
-                <h2>A little bit about me 🤠</h2>
-                <br>
-                <p>Hi there! I'm Andy and I am an interdisciplinary product designer and developer based in Boston and New Hampshire. I will be graduating from Boston University and the Kilachand Honors College with a Bachelor's in Computer Science.</p>
-                <br>
-                <p>Through my experiences, I am inspired by social innovation and storytelling. To bring people together through accessible design is the goal of every project I pursue. At the heart of UX design is to maximize the "naturalness" of the interactions between a user and the product. How can we make the user flow not only fun and not robotic but also natural like a conversation? It's all about adding a bit more color to the world.</p>
-                <br>
-                <p>Outside of Figma, I am an avid tree climber 🌲, major foodie (cooking and eating) 🍜, Star Wars enthusiast 🌌, and indie rock/pop guitarist 🎸. With my headset in and music on, I'll be dancing in my room or heel clicking down the street trying to beat my 89,119 minutes of Spotify from last year.</p>
-                <br>
-                <p>But enough about me. Let's talk about you! Message me through <a href="mailto:andyvo@bu.edu"><b>email</b></a> or <a href="https://www.linkedin.com/in/andyyvo/"><b>LinkedIn</b></a> with some food recommendations and let's have ourselves a coffee chat!</p>
-            </div>
-        </section>
-    </main>
 
     <footer>
         <!-- SOCIALS for the people!
