landing page things

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -42,7 +42,7 @@
             <div class="hamburgerline3"></div>
         </div>
         <ul class="menu">
-            <li class="item"><a href="/static/html/work.html">Work</a></li>
+            <li class="item"><a href="/static/html/index.html">Work</a></li>
             <li class="item active"><a href="/static/html/about.html">About</a></li>
             <li class="item"><a href="/static/html/resume.html">Resume</a></li>
         </ul>
