--- a/static/html/index.html
+++ b/static/html/index.html
@@ -42,7 +42,7 @@
             <div class="hamburgerline3"></div>
         </div>
         <ul class="menu">
-            <li class="item"><a href="/static/html/work.html">Work</a></li>
+            <li class="item active"><a href="#">Work</a></li>
             <li class="item"><a href="/static/html/about.html">About</a></li>
             <li class="item"><a href="/static/html/resume.html">Resume</a></li>
         </ul>
@@ -66,7 +66,20 @@
             <!-- click to scroll to first casestudy -->
             <div class="scrollDown"><a href="#study1"><i class="fas fa-angle-double-down"></i></a></div>
         </section>
-    
+        
+        <!-- current works -->
+        <section class="current">
+            <div class="current_pic">
+                <img src="/images/spark-logo-round.png" type="image/png" alt="BU Spark! logo">
+            </div>
+            <div class="current_info">
+                <h4 class="current_co">BU Spark!</h4>
+                <h5>User Experience Design Intern</h5>
+                <h2>Shaping Journalism Through Accessibility and Visualization</h2>
+                <p>Currently In Progress.</p>
+            </div>
+        </section>
+
         <!-- bucsambassadors -->
         <section class="casestudy" id="study1">
             <div class="casestudy_info" id="study1_card">
