pictures and tweaks

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -44,7 +44,7 @@
         <ul class="menu">
             <li class="item"><a href="/static/html/index.html">Work</a></li>
             <li class="item active"><a href="/static/html/about.html">About</a></li>
-            <li class="item"><a href="/static/html/resume.html">Resume</a></li>
+            <li class="item"><a href="https://drive.google.com/file/d/1HP8prJd6R01wwfnDkQSsgNcVoF7IT9ij/view?usp=sharing" target="_blank">Resume</a></li>
         </ul>
     </nav>
 
@@ -68,6 +68,120 @@
                 <p>But enough about me. Let's talk about you! Message me through <a href="mailto:andyvo@bu.edu"><b>email</b></a> or <a href="https://www.linkedin.com/in/andyyvo/"><b>LinkedIn</b></a> with some food recommendations and let's have ourselves a coffee chat!</p>
             </div>
         </section>
+
+        <section class="about_community">
+            <h2 class="about_com_header">At Boston University 🐶</h2>
+            <!-- productvision -->
+            <div class="about_com_card">
+                <div class="about_com_card_info">
+                    <h3><b>President, Marketing Chair</b></h3>
+                    <br>
+                    <h5><a href="https://productvision.me/" target="_blank">ProductVision</a> | August 2020 - Present</h5>
+                </div>
+                <div class="about_com_card_info paragraph_text">
+                    <p>As part of founding team of ProductVision, BU’s first product management student organization, I led the design behind the branding and the logo. Chairing the Marketing Team, my team and I drove the launch of ProductVision now with 70+ members. I'm looking forward to serving as President this upcoming 2021-2022 year!</p>
+                </div>
+            </div>
+            <!-- alpha chi sigma -->
+            <div class="about_com_card">
+                <div class="about_com_card_info">
+                    <h3><b>Professional Development Chair, Public Relations Chair</b></h3>
+                    <br>
+                    <h5><a href="https://www.axs-bu.com/" target="_blank">Alpha Chi Sigma</a> | April 2020 - Present</h5>
+                </div>
+                <div class="about_com_card_info paragraph_text">
+                    <p>A long time ago in a world not very far away... I was a pre-med biochemistry student and joined the professional chemistry fraternity. Finding opportunities as a CS major, I grew social media and web engagement by 125% by redesigning the website and creating graphics to market semester recruitment as PR Chair. I'll be continuing as PD Chair this upcoming year.</p>
+                </div>
+            </div>
+            <!-- resident assistant -->
+            <div class="about_com_card">
+                <div class="about_com_card_info">
+                    <h3><b>Resident Assistant</b></h3>
+                    <br>
+                    <h5><a href="https://www.bu.edu/reslife/" target="_blank">BU Residence Life</a> | June 2020 - Present</h5>
+                </div>
+                <div class="about_com_card_info paragraph_text">
+                    <p>There's something about being an RA for an entire brownstone apartment building. Is it the independence? Is it the kitchen? Is it the overseeing of my residents? I think it's all of the above! As an RA, I look after roughly 30 residents as well as host events and conduct on-call shifts for the Lower Bay State Road neighborhood.</p>
+                </div>
+            </div>
+            <!-- kilachand peer mentor -->
+            <div class="about_com_card">
+                <div class="about_com_card_info">
+                    <h3><b>Peer Mentor</b></h3>
+                    <br>
+                    <h5><a href="https://www.bu.edu/khc/" target="_blank">Kilachand Honors College</a> | August 2019 - May 2021</h5>
+                </div>
+                <div class="about_com_card_info paragraph_text">
+                    <p>Giving back to my community has always been a knack of mine, and what better way to help KHC freshmen than to serve as a role model and as a guide to navigate the first year of college.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="about_community">
+            <h2 class="about_com_header">Outside Class 📸</h2>
+            <div class="about_img_section">
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/bobaselftimer.JPG" alt="Andy Vo drinking boba">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/fencedsunset.JPG" alt="Sunset of Boston behind a fence">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/ramenforthegram.JPG" alt="Chopsticks holding ramen for Andy's food instagram">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/500boylston.JPG" alt="500 Boylston Street">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/andyvomarilynmonroe.JPG" alt="Andy Vo and Marilyn Monroe">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/metree.jpg" alt="Andy Vo portrait picture">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/baystatewinter.JPG" alt="Bay State Road in the winter">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/andyvovaccniated.JPG" alt="Andy Vo vaccinated">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/beaconstreettracks.JPG" alt="Beacon Street Green Line in the winter">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/bikeandtree.JPG" alt="Andy's bike in front of a blossoming tree">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/climbingtree.jpg" alt="Andy Vo climbing an apple tree">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/bobabrick.JPG" alt="Brown sugar boba tea in front of brick wall">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/greenline.JPG" alt="Green line at Boston University going into the sunset">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/guitarbw.jpg" alt="Andy Vo playing guitar">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/gyroatgreco.JPG" alt="A gyro at GreCo on Newbury">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/heelclick.jpg" alt="Andy Vo heelclicking on a trail">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/andyvobiking.JPG" alt="Andy Vo biking in Cambridge">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/hancocktower.JPG" alt="John Hancock Tower reflecting another building">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/topdownplates.jpg" alt="Andy Vo taking pictures for his topdownplates food instagram">
+                </div>
+                <div class="about_img_indiv">
+                    <img src="/images/pics for website/norollerblading.JPG" alt="Andy Vo rollerblading with a norollerblading sign">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -85,6 +199,7 @@
                 <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <!-- emoji ideas: tree, boba (not on all platforms), guitar, music, cowboy emoji, celebrate confetti popper, nerd emoji, rollerblades, lightbulb, fire -->
+            <p class="copyright_text">Designed 🎨 and coded 👨‍💻 by Andy Vo</p>
             <p class="copyright_text"><i class="far fa-copyright"></i> 2021 Andy Vo & 🎵🎸🌲</p>
         </div>
         <!-- closing html tag as logo -->
