--- a/static/html/index.html
+++ b/static/html/index.html
@@ -44,7 +44,7 @@
         <ul class="menu">
             <li class="item active"><a href="#">Work</a></li>
             <li class="item"><a href="/static/html/about.html">About</a></li>
-            <li class="item"><a href="/static/html/resume.html">Resume</a></li>
+            <li class="item"><a href="https://drive.google.com/file/d/1HP8prJd6R01wwfnDkQSsgNcVoF7IT9ij/view?usp=sharing" target="_blank">Resume</a></li>
         </ul>
     </nav>
 
@@ -177,11 +177,12 @@
             <h4>Let's have a coffee chat ☕</h4>
             <div class="socials">
                 <a href="mailto:andyvo@bu.edu" class="social_link mail" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/andyyvo/avoportfolio" class="social_link github"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/andyyvo/" class="social_link github"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <!-- emoji ideas: tree, boba (not on all platforms), guitar, music, cowboy emoji, celebrate confetti popper, nerd emoji, rollerblades, lightbulb, fire -->
+            <p class="copyright_text">Designed 🎨 and coded 👨‍💻 by Andy Vo</p>
             <p class="copyright_text"><i class="far fa-copyright"></i> 2021 Andy Vo & 🎵🎸🌲</p>
         </div>
         <!-- closing html tag as logo -->
