--- a/static/html/about.html
+++ b/static/html/about.html
@@ -51,7 +51,7 @@
     <main>
         <section class="about">
             <div class="about_img">
-                <img class="before_image" src="/images/andyvo_foodie.png" type="image/png" alt="Andy Vo Eating Food">
+                <img class="before_image" src="/images/andyvo_foodie.jpg" type="image/png" alt="Andy Vo Eating Food">
                 <video class="after_image" src="/images/andyvo_eats.mp4" muted autoplay loop></video>
                 <div class="behind_image bi1"></div>
                 <div class="behind_image bi2"></div>
