--- a/static/html/about.html
+++ b/static/html/about.html
@@ -52,7 +52,7 @@
         <section class="about">
             <div class="about_img">
                 <img class="before_image" src="/images/andyvo_foodie.jpg" type="image/png" alt="Andy Vo Eating Food">
-                <video class="after_image" src="/images/andyvo_eats.mp4" muted autoplay loop></video>
+                <video class="after_image" src="/images/andyvo_eats.mp4" playsinline muted autoplay loop></video>
                 <div class="behind_image bi1"></div>
                 <div class="behind_image bi2"></div>
             </div>
