--- a/static/html/about.html
+++ b/static/html/about.html
@@ -194,7 +194,7 @@
             <h4>Let's have a coffee chat ☕</h4>
             <div class="socials">
                 <a href="mailto:andyvo@bu.edu" class="social_link mail" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/andyyvo/avoportfolio" class="social_link github"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/andyyvo/" class="social_link github"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
