--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <nav>
         <!-- andy vo html tag logo -->
         <div class="logo">
-            <a href="/index.html">&lt;Andy Vo&gt;</a>
+            <a href="index">&lt;Andy Vo&gt;</a>
         </div>
         <div class="hamburger">
             <div class="hamburgerline1"></div>
@@ -42,9 +42,9 @@
             <div class="hamburgerline3"></div>
         </div>
         <ul class="menu">
-            <li class="item"><a href="/index.html">Work</a></li>
-            <li class="item active"><a href="/static/html/about.html">About</a></li>
-            <li class="item"><a href="https://drive.google.com/file/d/1HP8prJd6R01wwfnDkQSsgNcVoF7IT9ij/view?usp=sharing" target="_blank">Resume</a></li>
+            <li class="item"><a href="index">Work</a></li>
+            <li class="item active"><a href="about">About</a></li>
+            <li class="item"><a href="/images/andyvo_cv.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 
@@ -204,7 +204,7 @@
         </div>
         <!-- closing html tag as logo -->
         <div class="logo">
-            <a href="/index.html">&lt;/Andy Vo&gt;</a>
+            <a href="index">&lt;/Andy Vo&gt;</a>
         </div>
     </footer>
 
