--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <!-- favicon stuffs -->
-    <link rel="shortcut icon" type="image/png" href="/images/andyvo_logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_logo.png">
     <link rel="mask-icon" type="image/png" href="/images/andyvo_logo.png">
 
