mobile margins and padding

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <nav>
         <!-- andy vo html tag logo -->
         <div class="logo">
-            <a href="index">&lt;Andy Vo&gt;</a>
+            <a href="/">&lt;Andy Vo&gt;</a>
         </div>
         <div class="hamburger">
             <div class="hamburgerline1"></div>
@@ -42,7 +42,7 @@
             <div class="hamburgerline3"></div>
         </div>
         <ul class="menu">
-            <li class="item"><a href="index">Work</a></li>
+            <li class="item"><a href="/">Work</a></li>
             <li class="item active"><a href="about">About</a></li>
             <li class="item"><a href="/images/andyvo_cv.pdf" target="_blank">Resume</a></li>
         </ul>
@@ -204,7 +204,7 @@
         </div>
         <!-- closing html tag as logo -->
         <div class="logo">
-            <a href="index">&lt;/Andy Vo&gt;</a>
+            <a href="/">&lt;/Andy Vo&gt;</a>
         </div>
     </footer>
 
