ipad media queries

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="current_info">
                 <h4 class="current_co">BU Spark!</h4>
                 <h5>User Experience Design Intern</h5>
-                <h2>Shaping Journalism Through Accessibility and Visualization</h2>
+                <h2>Shaping Accessible Journalism</h2>
                 <p>Currently In Progress.</p>
             </div>
         </section>
