--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
     <link rel="mask-icon" type="image/png" href="/images/andyvo_logo.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -56,7 +59,7 @@
                 <div class="behind_image bi1"></div>
                 <div class="behind_image bi2"></div>
             </div>
-            <div class="about_text">
+            <div class="about_text" data-aos="fade-up" data-aos-duration="1500">
                 <h2>A little bit about me 🤠</h2>
                 <br>
                 <p>Hi there! I'm Andy and I am an interdisciplinary product designer and developer based in Boston and New Hampshire. I will be graduating from Boston University and the Kilachand Honors College with a Bachelor's in Computer Science.</p>
@@ -72,7 +75,7 @@
         <section class="about_community">
             <h2 class="about_com_header">At Boston University 🐶</h2>
             <!-- productvision -->
-            <div class="about_com_card">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <div class="about_com_card_info">
                     <h3><b>President, Marketing Chair</b></h3>
                     <br>
@@ -83,7 +86,7 @@
                 </div>
             </div>
             <!-- alpha chi sigma -->
-            <div class="about_com_card">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Professional Development Chair, Public Relations Chair</b></h3>
                     <br>
@@ -94,7 +97,7 @@
                 </div>
             </div>
             <!-- resident assistant -->
-            <div class="about_com_card">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Resident Assistant</b></h3>
                     <br>
@@ -105,7 +108,7 @@
                 </div>
             </div>
             <!-- kilachand peer mentor -->
-            <div class="about_com_card">
+            <div class="about_com_card" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <div class="about_com_card_info">
                     <h3><b>Peer Mentor</b></h3>
                     <br>
@@ -209,5 +212,11 @@
     </footer>
 
     <script src="/static/js/script.js"></script>
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
